apps/staging/nightscout/ferretdb-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ferretdb
spec:
  template:
    spec:
      containers:
        - name: ferretdb
          readinessProbe:
            httpGet:
              path: /debug/readyz
              port: 8088
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /debug/livez
              port: 8088
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /debug/readyz
              port: 8088
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
